# myte

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  deps.rs  iqtree.rs  main.rs  tree.rs  utils.rs
test_files/: gene_1.nexus  gene_2.nexus
