[package]
name = "myte"
version = "0.3.1"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
chrono = "0.4.*"
glob = "0.3.*"
num_cpus = "1.13.*"
rayon = "1.5.*"
indicatif = "0.16.*"
sysinfo = "0.16.*"

