[package]
name = "myte"
version = "0.5.5"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.*"
chrono = "0.4.*"
glob = "0.3.*"
indicatif = "0.16.*"
log = "0.4.14"
log4rs = "1.0.0"
num_cpus = "1.13.*"
rayon = "1.5.*"
sysinfo = "0.16.*"

[profile.release]
panic = "abort"